# litesearch

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  cli.html  cli.html.md  core.html  core.html.md  data.html  data.html.md  hello.py  index.html  index.html.md  postfix.html  postfix.html.md  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  utils.html  utils.html.md
.github/agents/: my-agent.agent.md
docs/superpowers/plans/: 2026-07-20-late-chunking.md
docs/superpowers/specs/: 2026-07-20-late-chunking-design.md
examples/: 01_simple_rag.ipynb  02_tool_use.ipynb  03_pixelrag.ipynb  03_rag_multimodal.ipynb  04_contract_compliance.ipynb
examples/pdfs/: pdfa2a
litesearch/: SKILL.md  __init__.py  _modidx.py  cache.py  cli.py  core.py  data.py  mcp.py  postfix.py  rag.py  tree.py  utils.py
nbs/: 00_core.ipynb  00_postfix.ipynb  01_core.ipynb  01_data.ipynb  01_ingest.ipynb  02_data.ipynb  03_utils.ipynb  04_cache.ipynb  04_cli.ipynb  04_latechunk_eval.ipynb  04_rag.ipynb  05_mcp.ipynb  05_tree.ipynb  index.ipynb  nbdev.yml  sidebar.yml
tests/: conftest.py  test_data.py  test_import.py  test_smoke.py  test_utils.py
thedu/: __init__.py  _modidx.py  core.py  data.py  ingest.py
