[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name="litesearch"
requires-python=">=3.10"
dynamic = [ "keywords", "description", "version", "dependencies", "optional-dependencies", "readme", "license", "authors", "classifiers", "entry-points", "scripts", "urls"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "settings.ini" }, { file = "setup.py" }]


[tool.ruff]
line-length = 129
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "SIM"]
ignore = ["F403", "F405"]

[dependency-groups]
dev = ["notebook>=7.4.7","nbdev","jupyterlab","jupyterlab-quarto","pytest>=8.0","pytest-cov>=4.0","ruff>=0.1.0"]
