[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litesearch"
dynamic = ["version"]
description = "search through files with fts5, vectors and get reranked results. Fast"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "71293", email = "karthik.rajgopal@hotmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    'fastlite',
    'usearch',
    'yake',
    'pdf_oxide',
    'onnxruntime',
    'tokenizers',
    'model2vec[distill]',
    "notebook",
]

[project.urls]
Repository = "https://github.com/Karthik777/litesearch"
Documentation = "https://Karthik777.github.io/litesearch"

[project.entry-points.nbdev]
litesearch = "litesearch._modidx:d"

[dependency-groups]
dev = [
    'notebook',
    'nbdev',
    'jupyterlab',
    'jupyterlab-quarto',
    'selectolax',
    'lisette',
    'ddgs',
    'pyperclip',
    "chonkie",
    'flashrank',
]

[tool.hatch.version]
path = "litesearch/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["litesearch"]

[tool.nbdev]
