[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litesearch"
dynamic = ["version"]
description = "search through files with fts5, vectors and get reranked results. Fast"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "71293", email = "karthik.rajgopal@hotmail.com"}]
keywords = ['nbdev', 'fts+vectors', 'semantic search', 'vector search', 'text search', 'document search']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    "chonkie>=1.6.0",
    "codesigs>=0.0.2",
    "fastlite>=0.2.4",
    "model2vec>=0.7.0",
    "notebook>=7.5.4",
    "onnxruntime>=1.24.3",
    "pdf-oxide>=0.3.17",
    "pillow>=12.1.1",
    "tokenizers>=0.22.2",
    "usearch>=2.23.0",
    "yake>=0.7.3",
]

[project.urls]
Repository = "https://github.com/Karthik777/litesearch"
Documentation = "https://Karthik777.github.io/litesearch"

[project.entry-points.nbdev]
litesearch = "litesearch._modidx:d"

[dependency-groups]
dev = [
    'notebook',
    'nbdev',
    'jupyterlab',
    'jupyterlab-quarto',
    'selectolax',
    'lisette',
    'ddgs',
    'pyperclip',
    "chonkie",
    'flashrank',
    "model2vec[distill]>=0.7.0",
]

[tool.hatch.version]
path = "litesearch/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["litesearch"]

[tool.hatch.build.targets.sdist]
include = [
    "/litesearch",
    "/README.md",
    "/pyproject.toml",
]

[tool.nbdev]
